InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/vlocity_ins__ProviderNetwork__c.object-meta.xml
<CustomObject>
    <description>A group of service providers such as physicians, hospitals or other providers that an insurance company has contracted with to provide services at prenegotiated rates to its members. Health care networks are typically organized for different types of health plans such as HMO, PPO and Medicare</description>
    <label>Provider Network</label>
    <nameField>
        <label>Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Network</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>