InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__CarrierAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CarrierAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Networks</relationshipLabel>
    <relationshipName>ProviderNetworkCarrierAccount</relationshipName>
    <type>Lookup</type>
</CustomField>