InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
    <defaultValue>(TODAY())</defaultValue>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>