InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__LocationDependent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LocationDependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Dependent</label>
    <type>Checkbox</type>
</CustomField>