InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__ParentNetworkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentNetworkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Network</label>
    <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
    <relationshipName>ChildNetworks</relationshipName>
    <type>Lookup</type>
</CustomField>