InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__RegionAvailability__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RegionAvailability__c</fullName>
    <description>DEPRECATED.</description>
    <label>Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ins__State</valueSetName>
    </valueSet>
</CustomField>