InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetwork__c/recordTypes/vlocity_ins__Producer.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Producer</fullName>
    <active>true</active>
    <label>Producer</label>
</RecordType>